modify cocktail style about anchor with cocktail__link that was wrong

--- a/src/html/detail.html
+++ b/src/html/detail.html
@@ -73,7 +73,7 @@
           <div class="cocktail container">
             <ul class="cocktail__list">
               <li class="cocktail__item">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
                   <div class="cocktail__description">
                     <h5 class="cocktail__title">カクテル名</h5>
@@ -82,7 +82,7 @@
                 </a>
               </li>
               <li class="cocktail__item">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
                   <div class="cocktail__description">
                     <h5 class="cocktail__title">カクテル名</h5>
