--- a/src/html/home.html
+++ b/src/html/home.html
@@ -43,7 +43,7 @@
           <div class="cocktail container">
             <ul class="cocktail__list">
               <li class="cocktail__item">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
                     alt="sample drink image"
@@ -56,7 +56,7 @@
                 </a>
               </li>
               <li class="cocktail__item">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
                     alt="sample drink image"
@@ -76,7 +76,7 @@
           <div class="cocktail container">
             <ul class="cocktail__list">
               <li class="cocktail__item">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
                     alt="sample drink image"
