--- a/src/html/mypage.html
+++ b/src/html/mypage.html
@@ -43,7 +43,7 @@
           <div class="cocktail container">
             <ul class="cocktail__list">
               <li class="cocktail__item">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
                   <div class="cocktail__description">
                     <h5 class="cocktail__title text-truncate">カシスオレンジ</h5>
@@ -65,7 +65,7 @@
           <div class="cocktail container">
             <ul class="cocktail__list">
               <li class="cocktail__item">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
                   <div class="cocktail__description">
                     <h5 class="cocktail__title text-truncate">カシスオレンジ</h5>
@@ -74,7 +74,7 @@
                 </a>
               </li>
               <li class="cocktail__item">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
                   <div class="cocktail__description">
                     <h5 class="cocktail__title text-truncate">ピーチフィズ</h5>
@@ -83,7 +83,7 @@
                 </a>
               </li>
               <li class="cocktail__item">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
                   <div class="cocktail__description">
                     <h5 class="cocktail__title text-truncate">ピーチフィズ</h5>
@@ -92,7 +92,7 @@
                 </a>
               </li>
               <li class="cocktail__item">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
                   <div class="cocktail__description">
                     <h5 class="cocktail__title text-truncate">ピーチフィズ</h5>
@@ -101,7 +101,7 @@
                 </a>
               </li>
               <li class="cocktail__item">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
                   <div class="cocktail__description">
                     <h5 class="cocktail__title text-truncate">ピーチフィズ</h5>
