--- a/src/html/search.html
+++ b/src/html/search.html
@@ -41,7 +41,7 @@
           <div class="cocktail container">
             <ul class="cocktail__list">
               <li class="cocktail__item">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
                     alt="sample drink image"
@@ -54,7 +54,7 @@
                 </a>
               </li>
               <li class="cocktail__item">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
                     alt="sample drink image"
