--- a/src/html/usual-menu.html
+++ b/src/html/usual-menu.html
@@ -64,7 +64,7 @@
           <div class="cocktail container">
             <ul class="cocktail__list">
               <li class="cocktail__item liquor">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
                     alt="sample drink image"
@@ -77,7 +77,7 @@
                 </a>
               </li>
               <li class="cocktail__item liquor">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
                     alt="sample drink image"
@@ -90,7 +90,7 @@
                 </a>
               </li>
               <li class="cocktail__item gin">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
                     alt="sample drink image"
@@ -103,7 +103,7 @@
                 </a>
               </li>
               <li class="cocktail__item tequila">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
                     alt="sample drink image"
@@ -116,7 +116,7 @@
                 </a>
               </li>
               <li class="cocktail__item vodka">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
                     alt="sample drink image"
@@ -129,7 +129,7 @@
                 </a>
               </li>
               <li class="cocktail__item rum">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
                     alt="sample drink image"
@@ -142,7 +142,7 @@
                 </a>
               </li>
               <li class="cocktail__item gin">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
                     alt="sample drink image"
@@ -155,7 +155,7 @@
                 </a>
               </li>
               <li class="cocktail__item liquor">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
                     alt="sample drink image"
@@ -168,7 +168,7 @@
                 </a>
               </li>
               <li class="cocktail__item other">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
                     alt="sample drink image"
