--- a/src/html/customize-menu.html
+++ b/src/html/customize-menu.html
@@ -78,7 +78,7 @@
           <div class="cocktail container">
             <ul class="cocktail__list">
               <li class="cocktail__item">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
                     alt="sample drink image"
@@ -91,7 +91,7 @@
                 </a>
               </li>
               <li class="cocktail__item">
-                <a href="cocktail__link">
+                <a href="./detail.html" class="cocktail__link">
                   <img
                     src="./img/sampleDrink.jpg"
                     alt="sample drink image"
