integrate sns icons, markup and styles in mobile-menu of each page

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -11,10 +11,7 @@
       <div id="contents-container">
         <div class="mobile-menu__cover"></div>
         <header class="header m-3">
-          <button
-            onclick="document.querySelector('#global-container').classList.toggle('menu-open')"
-            class="mobile-menu__btn"
-          >
+          <button onclick="document.querySelector('#global-container').classList.toggle('menu-open')" class="mobile-menu__btn">
             <span></span>
             <span></span>
             <span></span>
@@ -118,7 +115,11 @@
         <div class="mobile-menu__logo">
           <img src="./img/logo2.png" alt="logo2 image" />
         </div>
-        <div class="mobile-menu__sns">各種logoが入ります</div>
+        <div class="mobile-menu__sns">
+          <a href="https://www.facebook.com/Liquomend" class="fb_icon icon"><img src="./img/facebook.png" alt="Facebook" /></a>
+          <a href="https://www.instagram.com/liquomend" class="ig_icon icon"><img src="./img/instagram.png" alt="Instagram" /></a>
+          <a href="" class="tw_icon icon"><img src="./img/twitter.png" alt="Twitter" /></a>
+        </div>
       </nav>
     </div>
   </body>
