--- a/src/html/about.html
+++ b/src/html/about.html
@@ -65,11 +65,13 @@
         <div class="contact">
           <h4 class="contact__title main-title">Contact</h4>
           <p class="contact__email">E-mail：moon0903@gms.gdl.jp</p>
+
           <div class="contact__sns">
-            <span class="contact__icon">icon</span>
-            <span class="contact__icon">icon</span>
-            <span class="contact__icon">icon</span>
+            <a href="https://www.facebook.com/Liquomend" class="fb_icon icon"><img src="./img/facebook.png" alt="Facebook" /></a>
+            <a href="https://www.instagram.com/liquomend" class="ig_icon icon"><img src="./img/instagram.png" alt="Instagram" /></a>
+            <a href="" class="tw_icon icon"><img src="./img/twitter.png" alt="Twitter" /></a>
           </div>
+
           <div class="contact__logo">
             <img src="./img/logo2.png" alt="logo image" />
           </div>
