--- a/src/html/about.html
+++ b/src/html/about.html
@@ -67,9 +67,9 @@
           <p class="contact__email">E-mail：moon0903@gms.gdl.jp</p>
 
           <div class="contact__sns">
-            <a href="https://www.facebook.com/Liquomend" class="fb_icon icon"><img src="./img/facebook.png" alt="Facebook" /></a>
-            <a href="https://www.instagram.com/liquomend" class="ig_icon icon"><img src="./img/instagram.png" alt="Instagram" /></a>
-            <a href="" class="tw_icon icon"><img src="./img/twitter.png" alt="Twitter" /></a>
+            <a href="https://www.facebook.com/Liquomend" class="fb_icon icon"><img src="./img/facebook-about.png" alt="Facebook" /></a>
+            <a href="https://www.instagram.com/liquomend" class="ig_icon icon"><img src="./img/instagram-about.png" alt="Instagram" /></a>
+            <a href="" class="tw_icon icon"><img src="./img/twitter-about.png" alt="Twitter" /></a>
           </div>
 
           <div class="contact__logo">
@@ -84,7 +84,7 @@
       <nav class="mobile-menu">
         <div class="mobile-menu__profile">
           <div class="mobile-menu__icon">
-            <img src="./img/sampleDrink.jpg" alt="icon sample image" />
+            <img src="./img/sample-drink.jpg" alt="icon sample image" />
           </div>
           <div class="mobile-menu__username">User Name</div>
         </div>
