set redirect to login page when user is not identified and modify btn markup and styles in login page

--- a/src/html/login.html
+++ b/src/html/login.html
@@ -67,7 +67,7 @@
               <div class="login__btns">
                 <input type="submit" value="ログイン" class="form__btn" />
                 <p class="login__or__register">または</p>
-                <input type="submit" value="新規登録" class="form__btn" />
+                <a href="./register.html" class="form__btn">新規登録</a>
               </div>
             </form>
           </div>
