apply bootstrap grid rayout in home page and make media query fit to bootstrap media query

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -42,32 +42,57 @@
           <h3 class="recommend__title main-title">Recommend Recipe</h3>
           <div class="cocktail container">
             <ul class="cocktail__list">
-              <li class="cocktail__item">
-                <a href="./detail.html" class="cocktail__link">
-                  <img
-                    src="./img/sampleDrink.jpg"
-                    alt="sample drink image"
-                    class="cocktail__img"
-                  />
-                  <div class="cocktail__description">
-                    <h5 class="cocktail__title">カクテル名</h5>
-                    <p class="cocktail__text">ベースリキュール</p>
-                  </div>
-                </a>
-              </li>
-              <li class="cocktail__item">
-                <a href="./detail.html" class="cocktail__link">
-                  <img
-                    src="./img/sampleDrink.jpg"
-                    alt="sample drink image"
-                    class="cocktail__img"
-                  />
-                  <div class="cocktail__description">
-                    <h5 class="cocktail__title">カクテル名</h5>
-                    <p class="cocktail__text">ベースリキュール</p>
-                  </div>
-                </a>
-              </li>
+              <div class="row">
+                <div class="col-4 col-md-2 offset-md-3">
+                  <li class="cocktail__item">
+                    <a href="./detail.html" class="cocktail__link">
+                      <img
+                        src="./img/sample-drink.jpg"
+                        alt="sample drink image"
+                        class="cocktail__img"
+                      />
+                      <div class="cocktail__description">
+                        <h5 class="cocktail__title text-truncate">スーパーグレートドリンク</h5>
+                        <p class="cocktail__text">ベースリキュール</p>
+                      </div>
+                    </a>
+                  </li>
+                </div>
+                <div class="col-4 col-md-2">
+                  <li class="cocktail__item">
+                    <a href="./detail.html" class="cocktail__link">
+                      <img
+                        src="./img/sample-drink.jpg"
+                        alt="sample drink image"
+                        class="cocktail__img"
+                      />
+                      <div class="cocktail__description">
+                        <h5 class="cocktail__title">カクテル名</h5>
+                        <p class="cocktail__text">ベースリキュール</p>
+                      </div>
+                    </a>
+                  </li>
+                </div>
+                <div class="col-4 col-md-2">
+                  <li class="cocktail__item">
+                    <a href="./detail.html" class="cocktail__link">
+                      <img
+                        src="./img/sample-drink.jpg"
+                        alt="sample drink image"
+                        class="cocktail__img"
+                      />
+                      <div class="cocktail__description">
+                        <h5 class="cocktail__title text-truncate">スーパーグレートドリンク</h5>
+                        <p class="cocktail__text">ベースリキュール</p>
+                      </div>
+                    </a>
+                  </li>
+                </div>
+
+              </div>
+
+
+
             </ul>
           </div>
         </div>
@@ -75,19 +100,54 @@
           <h3 class="classic__title main-title">定番ドリンク</h3>
           <div class="cocktail container">
             <ul class="cocktail__list">
-              <li class="cocktail__item">
-                <a href="./detail.html" class="cocktail__link">
-                  <img
-                    src="./img/sampleDrink.jpg"
-                    alt="sample drink image"
-                    class="cocktail__img"
-                  />
-                  <div class="cocktail__description">
-                    <h5 class="cocktail__title">カクテル名</h5>
-                    <p class="cocktail__text">ベースリキュール</p>
-                  </div>
-                </a>
-              </li>
+              <div class="row">
+                <div class="col-4 col-md-2 offset-md-3">
+                  <li class="cocktail__item">
+                    <a href="./detail.html" class="cocktail__link">
+                      <img
+                        src="./img/sample-drink.jpg"
+                        alt="sample drink image"
+                        class="cocktail__img"
+                      />
+                      <div class="cocktail__description">
+                        <h5 class="cocktail__title text-truncate">スーパーグレートドリンク</h5>
+                        <p class="cocktail__text">ベースリキュール</p>
+                      </div>
+                    </a>
+                  </li>
+                </div>
+                <div class="col-4 col-md-2">
+                  <li class="cocktail__item">
+                    <a href="./detail.html" class="cocktail__link">
+                      <img
+                        src="./img/sample-drink.jpg"
+                        alt="sample drink image"
+                        class="cocktail__img"
+                      />
+                      <div class="cocktail__description">
+                        <h5 class="cocktail__title">カクテル名</h5>
+                        <p class="cocktail__text">ベースリキュール</p>
+                      </div>
+                    </a>
+                  </li>
+                </div>
+                <div class="col-4 col-md-2">
+                  <li class="cocktail__item">
+                    <a href="./detail.html" class="cocktail__link">
+                      <img
+                        src="./img/sample-drink.jpg"
+                        alt="sample drink image"
+                        class="cocktail__img"
+                      />
+                      <div class="cocktail__description">
+                        <h5 class="cocktail__title text-truncate">スーパーグレートドリンク</h5>
+                        <p class="cocktail__text">ベースリキュール</p>
+                      </div>
+                    </a>
+                  </li>
+                </div>
+
+              </div>
             </ul>
             <div class="more-btn">
               <a href="./usual-menu.html">+ MORE</a>
@@ -121,7 +181,7 @@
       <nav class="mobile-menu">
         <div class="mobile-menu__profile">
           <div class="mobile-menu__icon">
-            <img src="./img/sampleDrink.jpg" alt="icon sample image">
+            <img src="./img/sample-drink.jpg" alt="icon sample image">
           </div>
           <div class="mobile-menu__username">User Name</div>
         </div>
