add media query finely for cocktail image height to display well

--- a/src/html/home.html
+++ b/src/html/home.html
@@ -53,7 +53,7 @@
                       />
                       <div class="cocktail__description">
                         <h5 class="cocktail__title text-truncate">スーパーグレートドリンク</h5>
-                        <p class="cocktail__text">ベースリキュール</p>
+                        <p class="cocktail__text text-truncate">ベースリキュール</p>
                       </div>
                     </a>
                   </li>
@@ -67,8 +67,8 @@
                         class="cocktail__img"
                       />
                       <div class="cocktail__description">
-                        <h5 class="cocktail__title">カクテル名</h5>
-                        <p class="cocktail__text">ベースリキュール</p>
+                        <h5 class="cocktail__title text-truncate">カクテル名</h5>
+                        <p class="cocktail__text text-truncate">ベースリキュール</p>
                       </div>
                     </a>
                   </li>
@@ -83,7 +83,7 @@
                       />
                       <div class="cocktail__description">
                         <h5 class="cocktail__title text-truncate">スーパーグレートドリンク</h5>
-                        <p class="cocktail__text">ベースリキュール</p>
+                        <p class="cocktail__text text-truncate">ベースリキュール</p>
                       </div>
                     </a>
                   </li>
@@ -110,8 +110,8 @@
                         class="cocktail__img"
                       />
                       <div class="cocktail__description">
-                        <h5 class="cocktail__title text-truncate">スーパーグレートドリンク</h5>
-                        <p class="cocktail__text">ベースリキュール</p>
+                        <h5 class="cocktail__title text-truncate">カクテル名</h5>
+                        <p class="cocktail__text text-truncate">ベースリキュール</p>
                       </div>
                     </a>
                   </li>
@@ -125,8 +125,8 @@
                         class="cocktail__img"
                       />
                       <div class="cocktail__description">
-                        <h5 class="cocktail__title">カクテル名</h5>
-                        <p class="cocktail__text">ベースリキュール</p>
+                        <h5 class="cocktail__title text-truncate">カクテル名</h5>
+                        <p class="cocktail__text text-truncate">ベースリキュール</p>
                       </div>
                     </a>
                   </li>
@@ -140,8 +140,8 @@
                         class="cocktail__img"
                       />
                       <div class="cocktail__description">
-                        <h5 class="cocktail__title text-truncate">スーパーグレートドリンク</h5>
-                        <p class="cocktail__text">ベースリキュール</p>
+                        <h5 class="cocktail__title text-truncate">カクテル名</h5>
+                        <p class="cocktail__text text-truncate">ベースリキュール</p>
                       </div>
                     </a>
                   </li>
