--- a/src/html/search.html
+++ b/src/html/search.html
@@ -40,32 +40,53 @@
         <div class="drinks">
           <div class="cocktail container">
             <ul class="cocktail__list">
-              <li class="cocktail__item">
-                <a href="./detail.html" class="cocktail__link">
-                  <img
-                    src="./img/sampleDrink.jpg"
-                    alt="sample drink image"
-                    class="cocktail__img"
-                  />
-                  <div class="cocktail__description">
-                    <h5 class="cocktail__title">カクテル名</h5>
-                    <p class="cocktail__text">ベースリキュール</p>
-                  </div>
-                </a>
-              </li>
-              <li class="cocktail__item">
-                <a href="./detail.html" class="cocktail__link">
-                  <img
-                    src="./img/sampleDrink.jpg"
-                    alt="sample drink image"
-                    class="cocktail__img"
-                  />
-                  <div class="cocktail__description">
-                    <h5 class="cocktail__title">カクテル名</h5>
-                    <p class="cocktail__text">ベースリキュール</p>
-                  </div>
-                </a>
-              </li>
+              <div class="row">
+                <div class="col-4 col-md-2">
+                  <li class="cocktail__item">
+                    <a href="./detail.html" class="cocktail__link">
+                      <img
+                        src="./img/sample-drink.jpg"
+                        alt="sample drink image"
+                        class="cocktail__img"
+                      />
+                      <div class="cocktail__description">
+                        <h5 class="cocktail__title text-truncate">カクテル名</h5>
+                        <p class="cocktail__text text-truncate">ベースリキュール</p>
+                      </div>
+                    </a>
+                  </li>
+                </div>
+                <div class="col-4 col-md-2">
+                  <li class="cocktail__item">
+                    <a href="./detail.html" class="cocktail__link">
+                      <img
+                        src="./img/sample-drink.jpg"
+                        alt="sample drink image"
+                        class="cocktail__img"
+                      />
+                      <div class="cocktail__description">
+                        <h5 class="cocktail__title text-truncate">カクテル名</h5>
+                        <p class="cocktail__text text-truncate">ベースリキュール</p>
+                      </div>
+                    </a>
+                  </li>
+                </div>
+                <div class="col-4 col-md-2">
+                  <li class="cocktail__item">
+                    <a href="./detail.html" class="cocktail__link">
+                      <img
+                        src="./img/sample-drink.jpg"
+                        alt="sample drink image"
+                        class="cocktail__img"
+                      />
+                      <div class="cocktail__description">
+                        <h5 class="cocktail__title text-truncate">カクテル名</h5>
+                        <p class="cocktail__text text-truncate">ベースリキュール</p>
+                      </div>
+                    </a>
+                  </li>
+                </div>
+              </div>
             </ul>
           </div>
         </div>
@@ -94,7 +115,7 @@
       <nav class="mobile-menu">
         <div class="mobile-menu__profile">
           <div class="mobile-menu__icon">
-            <img src="./img/sampleDrink.jpg" alt="icon sample image">
+            <img src="./img/sample-drink.jpg" alt="icon sample image">
           </div>
           <div class="mobile-menu__username">User Name</div>
         </div>
