apply bootstrap to mypage

--- a/src/html/mypage.html
+++ b/src/html/mypage.html
@@ -23,7 +23,7 @@
           </div>
           <div class="mypage__hero">
             <div class="usericon">
-              <img src="./img/sampleDrink.jpg" alt="user image" />
+              <img src="./img/sample-drink.jpg" alt="user image" />
             </div>
             <p class="username">User Name</p>
           </div>
@@ -39,18 +39,56 @@
           </ul>
         </nav>
 
-        <div class="drinks js-target js-target-recipe inactive">
+        <div class="drinks js-target js-target-recipe active">
           <div class="cocktail container">
             <ul class="cocktail__list">
-              <li class="cocktail__item">
-                <a href="./detail.html" class="cocktail__link">
-                  <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
-                  <div class="cocktail__description">
-                    <h5 class="cocktail__title text-truncate">カシスオレンジ</h5>
-                    <p class="cocktail__text text-truncate">カシスリキュール</p>
-                  </div>
-                </a>
-              </li>
+              <div class="row">
+                <div class="col-4 col-md-2">
+                  <li class="cocktail__item">
+                    <a href="./detail.html" class="cocktail__link">
+                      <img
+                        src="./img/sample-drink.jpg"
+                        alt="sample drink image"
+                        class="cocktail__img"
+                      />
+                      <div class="cocktail__description">
+                        <h5 class="cocktail__title text-truncate">カクテル名</h5>
+                        <p class="cocktail__text text-truncate">ベースリキュール</p>
+                      </div>
+                    </a>
+                  </li>
+                </div>
+                <div class="col-4 col-md-2">
+                  <li class="cocktail__item">
+                    <a href="./detail.html" class="cocktail__link">
+                      <img
+                        src="./img/sample-drink.jpg"
+                        alt="sample drink image"
+                        class="cocktail__img"
+                      />
+                      <div class="cocktail__description">
+                        <h5 class="cocktail__title text-truncate">カクテル名</h5>
+                        <p class="cocktail__text text-truncate">ベースリキュール</p>
+                      </div>
+                    </a>
+                  </li>
+                </div>
+                <div class="col-4 col-md-2">
+                  <li class="cocktail__item">
+                    <a href="./detail.html" class="cocktail__link">
+                      <img
+                        src="./img/sample-drink.jpg"
+                        alt="sample drink image"
+                        class="cocktail__img"
+                      />
+                      <div class="cocktail__description">
+                        <h5 class="cocktail__title text-truncate">カクテル名</h5>
+                        <p class="cocktail__text text-truncate">ベースリキュール</p>
+                      </div>
+                    </a>
+                  </li>
+                </div>
+              </div>
             </ul>
           </div>
           <div class="recipe-btn">
@@ -64,51 +102,38 @@
         <div class="drinks js-target js-target-favo inactive">
           <div class="cocktail container">
             <ul class="cocktail__list">
-              <li class="cocktail__item">
-                <a href="./detail.html" class="cocktail__link">
-                  <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
-                  <div class="cocktail__description">
-                    <h5 class="cocktail__title text-truncate">カシスオレンジ</h5>
-                    <p class="cocktail__text text-truncate">カシスリキュール</p>
-                  </div>
-                </a>
-              </li>
-              <li class="cocktail__item">
-                <a href="./detail.html" class="cocktail__link">
-                  <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
-                  <div class="cocktail__description">
-                    <h5 class="cocktail__title text-truncate">ピーチフィズ</h5>
-                    <p class="cocktail__text text-truncate">ピーチリキュール</p>
-                  </div>
-                </a>
-              </li>
-              <li class="cocktail__item">
-                <a href="./detail.html" class="cocktail__link">
-                  <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
-                  <div class="cocktail__description">
-                    <h5 class="cocktail__title text-truncate">ピーチフィズ</h5>
-                    <p class="cocktail__text text-truncate">ピーチリキュール</p>
-                  </div>
-                </a>
-              </li>
-              <li class="cocktail__item">
-                <a href="./detail.html" class="cocktail__link">
-                  <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
-                  <div class="cocktail__description">
-                    <h5 class="cocktail__title text-truncate">ピーチフィズ</h5>
-                    <p class="cocktail__text text-truncate">ピーチリキュール</p>
-                  </div>
-                </a>
-              </li>
-              <li class="cocktail__item">
-                <a href="./detail.html" class="cocktail__link">
-                  <img src="./img/sampleDrink.jpg" alt="sample drink image" class="cocktail__img" />
-                  <div class="cocktail__description">
-                    <h5 class="cocktail__title text-truncate">ピーチフィズ</h5>
-                    <p class="cocktail__text text-truncate">ピーチリキュール</p>
-                  </div>
-                </a>
-              </li>
+              <div class="row">
+                <div class="col-4 col-md-2">
+                  <li class="cocktail__item">
+                    <a href="./detail.html" class="cocktail__link">
+                      <img
+                        src="./img/sample-drink.jpg"
+                        alt="sample drink image"
+                        class="cocktail__img"
+                      />
+                      <div class="cocktail__description">
+                        <h5 class="cocktail__title text-truncate">カクテル名</h5>
+                        <p class="cocktail__text text-truncate">ベースリキュール</p>
+                      </div>
+                    </a>
+                  </li>
+                </div>
+                <div class="col-4 col-md-2">
+                  <li class="cocktail__item">
+                    <a href="./detail.html" class="cocktail__link">
+                      <img
+                        src="./img/sample-drink.jpg"
+                        alt="sample drink image"
+                        class="cocktail__img"
+                      />
+                      <div class="cocktail__description">
+                        <h5 class="cocktail__title text-truncate">カクテル名</h5>
+                        <p class="cocktail__text text-truncate">ベースリキュール</p>
+                      </div>
+                    </a>
+                  </li>
+                </div>
+              </div>
             </ul>
           </div>
           <div class="recipe-btn">
@@ -119,7 +144,7 @@
           </div>
         </div>
 
-        <div class="settings js-target js-target-settings active">
+        <div class="settings js-target js-target-settings inactive">
           <div class="container">
             <div class="row">
               <div class="col-12">
@@ -140,7 +165,7 @@
       <nav class="mobile-menu">
         <div class="mobile-menu__profile">
           <div class="mobile-menu__icon">
-            <img src="./img/sampleDrink.jpg" alt="icon sample image" />
+            <img src="./img/sample-drink.jpg" alt="icon sample image" />
           </div>
           <div class="mobile-menu__username">User Name</div>
         </div>
