link username in mobile-menu to mypage with anchor element and apply it in all pages modifying style

--- a/src/html/about.html
+++ b/src/html/about.html
@@ -86,7 +86,7 @@
           <div class="mobile-menu__icon">
             <img src="./img/sample-drink.jpg" alt="icon sample image" />
           </div>
-          <div class="mobile-menu__username" style="cursor: pointer;" onclick="location.href='./mypage.php'">User Name</div>
+          <div class="mobile-menu__username"><a href="./mypage.php">User Name</a></div>
         </div>
         <div class="mobile-menu__body">
           <ul class="mobile-menu__main">
