fix displayed contents in register and login pages

--- a/src/html/register.html
+++ b/src/html/register.html
@@ -25,13 +25,9 @@
             <img src="./img/hero.jpg" alt="hero image" />
           </div>
         </div>
-        <nav class="nav">
-          <ul class="nav__list">
-            <li class="nav__item"><a href="#" class="nav__link">About</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">About</a></li>
-            <li class="nav__item"><a href="#" class="nav__link">About</a></li>
-          </ul>
-        </nav>
+        <div class="register__notation">
+          <p class="notation">新規ユーザー登録画面です</p>
+        </div>
 
         <div class="container">
           <div class="row">
